# k4ODD

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  run_particle_sim.sh  setup.sh
.github/workflows/: key4hep-build.yaml  pandora-sanity.yaml  pipeline.yaml  pre-commit.yaml
ci/: analyse_pfo_gamma_conversion.py  analyse_pfo_performance.py  analyse_single_shower_podio.py  analyse_single_shower_root.py  check_validation_results.py  rebuild_local_stack.sh  run_pandora_sanity.sh  validation_ranges.json
ci/reference/: digiVal_highstat_results.root  digiVal_results.root  pandoraVal_results.root  simVal_highstat_results.root  simVal_results.root
ci/reference/nightly-ubuntu24/: digiVal_results.root  simVal_results.root
ci/reference/release-alma9/: digiVal_results.root  simVal_results.root
ddODD/: CMakeLists.txt
ddODD/include/: Geant4KeepAllUserParticleHandler.h
ddODD/src/: Geant4KeepAllUserParticleHandler.cpp
k4ODD/: CMakeLists.txt
k4ODD/options/: ODDcalibration.py  ODDdigitisation.py  ODDdigitisationtest.py  ODDreco_firstTry.py  ODDreconstruction.py  ODDsimulation.py  ODDsimulationGraph.py  PandoraLikelihoodData9EBin.xml  PandoraSettingsMinimal.xml  PandoraSettingsPhotonTraining.xml  PandoraSettingsSanity.xml  cld_steer.py  odd_geometry.py
k4ODD/src/components/: CreateEmptyTracks.cpp
